fix: prevent jumping timer el with min-width.

--- a/src/styles/pages/_recipe_single.scss
+++ b/src/styles/pages/_recipe_single.scss
@@ -423,6 +423,9 @@
     .time-string {
       align-self: center;
       display: flex;
+      align-self: center;
+      min-width: 40px;
+      justify-content: center;
     }
 
     .close-btn {
